# RayShooter3D

./: CMakeLists.txt
include/: game.hpp  game_object.hpp  player.hpp  resource_manager.hpp
src/: game.cpp  game_object.cpp  main.cpp  player.cpp  resource_manager.cpp
